--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,5 +20,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./
-          server-dir: /www/mon-site
+          server-dir: ./htdocs/
           dry-run: false
